--- a/Langton's Ant at a glance.ipynb
+++ b/Langton's Ant at a glance.ipynb
@@ -520,7 +520,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "From these experimental data, it seems that while Langton's Ant initially generates some rather ordinary results from its walk, after several hundred or thousand steps (at least on a smaller grid such as ours), its behaviour starts becoming less uniform. "
+    "From these experimental data, it seems that while Langton's Ant initially generates some rather ordinary results from its walk, after several hundred or thousand steps (at least on a smaller grid such as ours), its behaviour starts becoming less uniform. \n",
+    "\n",
+    "The time complexity of this CA seems to be linear, or $O(n)$. Running larger or longer CA experiments with these algorithms will thus scale linearly with size: larger models will take proportionally longer amounts of time to run. This is supported by our findings when comparing our number of steps against the amount of time taken to generate each subplot, using data measured earlier with the `timeit` library. \n",
+    "\n",
+    "In the case of our 12 runs with our `blank_ants` objects, plotting the data as steps vs time (in ms) then finding the line of best fit gives us a linear line $y = mx + b$ with $y = 0.0011420$ and $b = 0.4236745$. Unlike in the case of the game of life, where we're able to make efficiency improvements via 'pre-computing' possible transitions in a lookup table, there isn't nearly as much to do here given that we're simply flipping one bit at a time, and as such, off the top of my head, the optimized time complexity is still roughly linear, though there likely exist potential changes to improve the overhead of my code. \n",
+    "\n",
+    "Anyhow, I finally understand where the interaction between the ants and metal units [from the old Dan-Ball Dust game](https://dan-ball.jp/en/javagame/dust/) come from now!"
    ]
   }
  ],
