--- a/Langton's Ant at a glance.ipynb
+++ b/Langton's Ant at a glance.ipynb
@@ -310,7 +310,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now let's use our new function!"
+    "Now let's use our new function!\n",
+    "\n",
+    "I apologize if the figures are too small; they can be generated again locally, should this notebook be downloaded, and the layout and sizes can be adjust by changing the line `fig, axes = plt.subplots(3, 4, figsize=(30, 20))` in the code block above. This notebook was originally written on a desktop computer with 24\" monitors, and thus scaled accordingly. "
    ]
   },
   {
